--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -13,9 +13,9 @@
 </head>
 
 
-<body class="blue-grey darken-4">
+<body class="blue-grey darken-4" >
 
-    <!-- Dropdown Structure -->
+    <!-- Dropdown Structure  -->
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="#!">Sign in</a></li>
     <li><a href="sign_up.html">Sign up</a></li>
@@ -119,7 +119,7 @@
     <div class="footer-copyright">
       <div class="container black-text ">
          © 2014 Copyright Text
-      <a class="orange-text text-lighten-3 right" </a>
+      <a class="black-text text-lighten-3 right" </a>
       </div>
     </div>
   </footer>
