More pages and posters added
Added a sign in/out and profile page, in addition to posters

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -17,7 +17,7 @@
 
     <!-- Dropdown Structure  -->
   <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Sign in</a></li>
+    <li><a href="sign_in.html">Sign in</a></li>
     <li><a href="sign_up.html">Sign up</a></li>
     <!-- <li class="divider"></li> --->
   </ul>
@@ -26,7 +26,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="large brand-logo"><i class="material-icons">menu</i></a>
+      <a href="index.html" class="large material-icons"><i class="material-icons">menu</i></a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -57,9 +57,10 @@
 
           <div class="input-field white ">
                   <input id="search" type="search" required>
-                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                  <label class="label-icon deep-orange-text" for="search"><i class="material-icons deep-orange-text">search</i></label>
                   <i class="material-icons">close</i>
           </div>
+
         <!--
         <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light deep-orange">Get Started</a>
         -->
@@ -117,7 +118,7 @@
   <footer class="page-footer deep-orange">
 
     <div class="footer-copyright">
-      <div class="container black-text ">
+      <div class="container white-text ">
          © 2014 Copyright Text
       <a class="black-text text-lighten-3 right" </a>
       </div>
