--- a/starter-template/search_res.html
+++ b/starter-template/search_res.html
@@ -14,9 +14,9 @@
 
 <body class="blue-grey darken-4">
 
-    <!-- Dropdown Structure -->
+  <!-- Dropdown Structure -->
   <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Sign in</a></li>
+    <li><a href="sign_in.html">Sign in</a></li>
     <li><a href="sign_up.html">Sign up</a></li>
     <!-- <li class="divider"></li> --->
 
@@ -46,60 +46,60 @@
 
 
 
-      <div class="parallax-container">
-        <div class="parallax"> <img src="content/image2.jpg" ></div>
-      </div>
+  <div class="parallax-container">
+    <div class="parallax"> <img src="content/image2.jpg" ></div>
+  </div>
 
-      <div class="section blue-grey-text deep-orange">
-        <div class="row container">
+  <div class="section blue-grey-text deep-orange">
+    <div class="row container">
 
+      <br></br>
+      <h5 class="center header white-text light">Your next binge thing...</h5>
+      <!--
+      <p class="white-text light ">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+    -->
+    <div class="carousel">
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg"></a>
+    </div>
 
-          <h4 class="center header white-text light">Your next binge thing...</h4>
-          <!--
-          <p class="white-text light ">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-          -->
-          <div class="carousel">
-            <a class="carousel-item" href="#modal1"> <img src="content/posters/poster1.jpg" resize></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg"></a>
-            <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg"></a>
-         </div>
+  </div>
+</div>
 
-        </div>
-      </div>
-
-      <div class="parallax-container">
-        <div class="parallax"><img src="content/image1.jpg" ></div>
-      </div>
-
-
-      <!-- Modal Structure -->
-      <div id="modal1" class="modal blue-grey darken-4 white-text">
-          <div class="modal-content">
-            <h4 class="center deep-orange-text">Fight Club</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="modal-footer blue-grey darken-4 white-text">
-            <a href="#!" class="btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">add</i></a>
-
-            <!--  Thumbs up or down... ?
-            <a href="#!" class="btn-floating btn-large waves-effect waves-light green center"><i class="material-icons">thumb_up</i></a>
-            <a href="#!" class="btn-floating btn-large waves-effect waves-light red center"><i class="material-icons">thumb_down</i></a>
-            -->
-            <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i class="material-icons">check</i></a>
-          </div>
-        </div>
+<div class="parallax-container">
+  <div class="parallax"><img src="content/image1.jpg" ></div>
+</div>
 
 
-  <footer class="page-footer deep-orange">
+<!-- Modal Structure -->
+<div id="modal1" class="modal blue-grey darken-4 white-text">
+  <div class="modal-content">
+    <h4 class="center deep-orange-text">Fight Club</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+  <div class="modal-footer blue-grey darken-4 white-text">
+    <a href="#!" class="btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">add</i></a>
 
-    <div class="footer-copyright">
-      <div class="container black-text ">
-         © 2014 Copyright Text
+    <!--  Thumbs up or down... ?
+    <a href="#!" class="btn-floating btn-large waves-effect waves-light green center"><i class="material-icons">thumb_up</i></a>
+    <a href="#!" class="btn-floating btn-large waves-effect waves-light red center"><i class="material-icons">thumb_down</i></a>
+  -->
+  <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i class="material-icons">check</i></a>
+</div>
+</div>
+
+
+<footer class="page-footer deep-orange">
+
+  <div class="footer-copyright">
+    <div class="container white-text ">
+      © 2014 Copyright Text
       <a class="orange-text text-lighten-3 right" </a>
       </div>
     </div>
@@ -112,5 +112,5 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-  </body>
+</body>
 </html>
