Modifications and logo
Added logo(s) and modified the search results page

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -26,7 +26,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="large material-icons"><i class="material-icons">menu</i></a>
+      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -45,13 +45,18 @@
 
 
   <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
+    <div class="container center">
       <br><br>
-      <h1 class="header center white-text light"> Springe. </h1>
+
+      <a class="brand-logo "> <img src="content/springe_white_text.png" height=auto style="max-width:450px"/> </a>
+      <!-- <h1 class="header center white-text light"> Springe. </h1> -->
 
       <div class="row center">
         <h5 class="header col s12 light white-text"> Your next binge thing! </h5>
       </div>
+
+
+    <br><br>
 
       <div class="row center">
 
@@ -101,7 +106,7 @@
             <h2 class="center deep-orange-text"><i class="material-icons">ondemand_video</i></h2>
             <h5 class="center white-text">Binge</h5>
 
-            <p class="light white-text">Head to your favorite streaming service (Netflix, HBO, Amazon etc.) and start bingeing. </p>
+            <p class="light white-text">Head to your favorite streaming service (Netflix, HBO, Amazon etc.) and start binging. </p>
           </div>
         </div>
       </div>
@@ -119,7 +124,7 @@
 
     <div class="footer-copyright">
       <div class="container white-text ">
-         © 2014 Copyright Text
+         © 2017 Copyright Text
       <a class="black-text text-lighten-3 right" </a>
       </div>
     </div>
