--- a/starter-template/my_page.html
+++ b/starter-template/my_page.html
@@ -19,7 +19,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="large brand-logo"><i class="material-icons">menu</i></a>
+      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -41,54 +41,54 @@
     <!-- Thumbnail image view-->
 
     <div class="container">
-      <table border="1" align="center" width="70%">
+      <table border="1" align="center">
         <h4 class="white-text">My Watchlist</h4>
         <tr>
-          <td><img src="content/posters/poster2.jpg">
+          <td><img src="content/posters/poster2.jpg" width="350">
             <center>
-              <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
+              <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">close</i></a>
             </center>
             </td>
-          <td><img src="content/posters/poster16.jpg">
+          <td><img src="content/posters/poster16.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
         </td>
-          <td><img src="content/posters/poster3.jpg">
+          <td><img src="content/posters/poster3.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
           </td>
         </tr>
         <tr>
-          <td><img src="content/posters/poster7.jpg">
+          <td><img src="content/posters/poster7.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
           </td>
-          <td><img src="content/posters/poster12.jpg">
+          <td><img src="content/posters/poster12.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
             </td>
-          <td><img src="content/posters/poster6.jpg">
+          <td><img src="content/posters/poster6.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
             </td>
         </tr>
         <tr>
-          <td><img src="content/posters/poster10.jpg">
+          <td><img src="content/posters/poster10.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
           </td>
-          <td><img src="content/posters/poster5.jpg">
+          <td><img src="content/posters/poster5.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
             </td>
-          <td><img src="content/posters/poster1.jpg">
+          <td><img src="content/posters/poster1.jpg" width="350">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
@@ -105,7 +105,7 @@
 
     <div class="footer-copyright">
       <div class="container white-text ">
-        © 2014 Copyright Text
+        © 2017 Copyright Text
         <a class="orange-text text-lighten-3 right" </a>
         </div>
       </div>
