--- a/starter-template/search_res.html
+++ b/starter-template/search_res.html
@@ -27,7 +27,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="large brand-logo"><i class="material-icons">menu</i></a>
+    <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -50,23 +50,27 @@
     <div class="parallax"> <img src="content/image2.jpg" ></div>
   </div>
 
-  <div class="section blue-grey-text deep-orange">
+  <div class="section blue-grey darken-4">
     <div class="row container">
 
-      <br></br>
-      <h5 class="center header white-text light">Your next binge thing...</h5>
-      <!--
-      <p class="white-text light ">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-    -->
+      <h5 class="white-text light center"> Your next binge... </h5>
+
     <div class="carousel">
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg"></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg"></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg" ></a>
+      <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg" ></a>
+    </div>
+
+    <br></br>
+
+    <div class="container center">
+      <a class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
+
     </div>
 
   </div>
