--- a/starter-template/sign_in.html
+++ b/starter-template/sign_in.html
@@ -25,7 +25,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="large brand-logo"><i class="material-icons">menu</i></a>
+      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -99,7 +99,7 @@
 
         <div class="footer-copyright">
           <div class="container white-text ">
-             © 2014 Copyright Text
+             © 2017 Copyright Text
           <a class="orange-text text-lighten-3 right" </a>
           </div>
         </div>
