--- a/starter-template/search_res.html
+++ b/starter-template/search_res.html
@@ -53,7 +53,7 @@
   <div class="section blue-grey darken-4">
     <div class="row container">
 
-      <h5 class="white-text light center"> Your next binge... </h5>
+      <h5 class="white-text light thin center"> Your next binge thing... </h5>
 
     <div class="carousel">
       <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg" ></a>
