--- a/starter-template/my_page.html
+++ b/starter-template/my_page.html
@@ -44,44 +44,37 @@
       <table border="1" align="center">
         <h4 class="white-text">My Watchlist</h4>
         <tr>
-          <td><img src="content/posters/poster2.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster2.jpg" width="350">
               <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">close</i></a>
-            </center>
             </td>
           <td><img src="content/posters/poster16.jpg" width="350">
-            <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
         </td>
-          <td><img src="content/posters/poster3.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster3.jpg" width="350">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
           </td>
+
         </tr>
         <tr>
-          <td><img src="content/posters/poster7.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster7.jpg" width="350">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
           </td>
-          <td><img src="content/posters/poster12.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster12.jpg" width="350">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
             </td>
-          <td><img src="content/posters/poster6.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster6.jpg" width="350">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
             </td>
         </tr>
         <tr>
-          <td><img src="content/posters/poster10.jpg" width="350">
-            <center>
+          <td>
+            <img src="content/posters/poster10.jpg" width="350">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
           </td>
           <td><img src="content/posters/poster5.jpg" width="350">
             <center>
