--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -72,7 +72,7 @@
     <div class="container center">
       <br><br>
 
-      <a class="brand-logo "> <img src="content/springe_white_text.png" height=auto /> </a>
+      <a class="brand-logo"> <img src="content/springe_white_text.png" height=auto /> </a>
       <!-- <h1 class="header center white-text light"> Springe. </h1> -->
       <div class="row center">
         <h5 class="header col s12 light thin white-text">Your next binge thing! </h5>
@@ -89,12 +89,12 @@
 
                 <div class="input-field white">
                     <label class="label-icon deep-orange-text" for="search"> <i class="material-icons deep-orange-text">search</i> </label>
-                     <input id="search" type="search" name="series" size="100" placeholder=" What are you binging....?" />
+                     <input id="search" type="search" name="series" size="100" placeholder=" What are you currently binging?" />
                 </div>
 
                 <a id="showthem" class="waves-effect deep-orange waves-yellow light btn" > Search </a>
 
-            <!-- </form> -->
+             <!-- </form> -->
 
 
           <br><br>
