--- a/starter-template/my_page.html
+++ b/starter-template/my_page.html
@@ -45,43 +45,43 @@
         <h4 class="white-text">My Watchlist</h4>
         <tr>
           <td>
-            <img src="content/posters/poster2.jpg" width="350">
+            <img src="content/posters/poster2.jpg" style="max-height: 350px">
               <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">close</i></a>
             </td>
-          <td><img src="content/posters/poster16.jpg" width="350">
+          <td><img src="content/posters/poster16.jpg" style="max-height: 350px">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
         </td>
           <td>
-            <img src="content/posters/poster3.jpg" width="350">
+            <img src="content/posters/poster3.jpg" style="max-height: 350px">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
           </td>
 
         </tr>
         <tr>
           <td>
-            <img src="content/posters/poster7.jpg" width="350">
+            <img src="content/posters/poster7.jpg" style="max-height: 350px">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
           </td>
           <td>
-            <img src="content/posters/poster12.jpg" width="350">
+            <img src="content/posters/poster12.jpg" style="max-height: 350px">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </td>
           <td>
-            <img src="content/posters/poster6.jpg" width="350">
+            <img src="content/posters/poster6.jpg" style="max-height: 350px" >
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </td>
         </tr>
         <tr>
           <td>
-            <img src="content/posters/poster10.jpg" width="350">
+            <img src="content/posters/poster10.jpg" style="max-height: 350px">
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
           </td>
-          <td><img src="content/posters/poster5.jpg" width="350">
+          <td><img src="content/posters/poster5.jpg" style="max-height: 350px">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
             </td>
-          <td><img src="content/posters/poster1.jpg" width="350">
+          <td><img src="content/posters/poster1.jpg" style="max-height: 350px">
             <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
             </center>
