--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -11,13 +11,14 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
 
-  <!---  Script for getting the filminfo
-  <script type="text/javascript">
-  function dos12(series) {
-    window.open('http://www.omdbapi.com/?t='+series+'&type=series', 'G1window');
-  }
-  </script>
-  End script -->
+        <!---  Script for getting the filminfo
+          <script type="text/javascript">
+          function dos12(series) {
+            window.open('http://www.omdbapi.com/?t='+series+'&type=series', 'G1window');
+          }
+          </script>
+          End script
+        -->
 
     <script>
         // Called on form's `onsubmit`
@@ -58,7 +59,6 @@
         <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
         <li><a class="dropdown-button" href="#" data-activates="dropdown1">Login or Register<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
-
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#"> Login or Register</a></li>
         <li><a href="#"><i class="material-icons">more_vert</i></a></li>
@@ -83,9 +83,7 @@
 
       <div class="row center">
 
-
-
-            <!-- <form onsubmit="tosubmit();" action="search_res.html"> -->
+             <!-- <form onsubmit="tosubmit();" action="search_res.html"> -->
 
                 <div class="input-field white">
                     <label class="label-icon deep-orange-text" for="search"> <i class="material-icons deep-orange-text">search</i> </label>
