Mostly improvements and alterations to the search-result modal view, and the logo, from a simple icon to combo of text + icon ;)

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -51,7 +51,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
+      <a href="index.html" class="brand-logo "> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -83,7 +83,7 @@
 
       <div class="row center">
 
-             <!-- <form onsubmit="tosubmit();" action="search_res.html"> -->
+              <!-- <form onsubmit="tosubmit();" action="search_res.html"> -->
 
                 <div class="input-field white">
                     <label class="label-icon deep-orange-text" for="search"> <i class="material-icons deep-orange-text">search</i> </label>
@@ -92,7 +92,7 @@
 
                 <a id="showthem" class="waves-effect deep-orange waves-yellow light btn" > Search </a>
 
-             <!-- </form> -->
+             <!--  </form> -->
 
 
           <br><br>
