--- a/starter-template/my_page.html
+++ b/starter-template/my_page.html
@@ -19,7 +19,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
+      <a href="index.html" class="brand-logo "> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -77,14 +77,10 @@
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
           </td>
           <td><img src="content/posters/poster5.jpg" style="max-height: 350px">
-            <center>
             <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
             </td>
           <td><img src="content/posters/poster1.jpg" style="max-height: 350px">
-            <center>
-            <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange "><i class="material-icons">close</i></a>
-            </center>
+            <a href="#!" class=" btn-floating btn-large waves-effect waves-light deep-orange  "><i class="material-icons">close</i></a>
             </td>
         </tr>
       </table>
@@ -99,7 +95,7 @@
     <div class="footer-copyright">
       <div class="container white-text ">
         © 2017 Copyright Text
-        <a class="orange-text text-lighten-3 right" </a>
+        <a class="orange-text text-lighten-3 right"> </a>
         </div>
       </div>
     </footer>
