--- a/starter-template/show_all.html
+++ b/starter-template/show_all.html
@@ -34,7 +34,7 @@
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
+        <a href="index.html" class="brand-logo "> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
         <ul class="right hide-on-med-and-down">
             <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
