--- a/starter-template/search_res.html
+++ b/starter-template/search_res.html
@@ -1,145 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>Starter Template - Materialize</title>
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-  <script>
-      // Called on body's `onload` event
-      function init() {
-          // Retrieving the text input's value which was stored into localStorage
-          var search = localStorage.getItem("search");
+    <script>
+        // Called on body's `onload` event
+        function init() {
+            // Retrieving the text input's value which was stored into localStorage
+            var search = localStorage.getItem("search");
 
-          // Writing the value in the document
-          document.write("passed value = "+ search);
-          console.log("In HTML");
-          console.log(getReccomended());
-      }
+            // Writing the value in the document
+            document.write("passed value = "+ search);
+            console.log("In HTML");
+            console.log(search);
+        }
 
-  </script>
+    </script>
 
 </head>
 
 
 <body class="blue-grey darken-4" >
 
-  <!-- Dropdown Structure -->
+<!-- Dropdown Structure -->
 
-  <ul id="dropdown1" class="dropdown-content">
+<ul id="dropdown1" class="dropdown-content">
     <li><a href="sign_in.html">Sign in</a></li>
     <li><a href="sign_up.html">Sign up</a></li>
     <!-- <li class="divider"></li> --->
-  </ul>
+</ul>
 
-  <nav class="deep-orange lighten" role="navigation">
+<nav class="deep-orange lighten" role="navigation">
 
     <div class="nav-wrapper container">
 
-    <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
+        <a href="index.html" class="brand-logo"> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
-      <ul class="right hide-on-med-and-down">
-        <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
-        <li><a href="#2"><i class="material-icons">view_module</i></a></li>
-        <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
-        <li><a class="dropdown-button" href="#" data-activates="dropdown1">Login or Register
-          <i class="material-icons right">arrow_drop_down</i></a></li>
-      </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
+            <li><a href="#2"><i class="material-icons">view_module</i></a></li>
+            <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
+            <li><a class="dropdown-button" href="#" data-activates="dropdown1">Login or Register
+                <i class="material-icons right">arrow_drop_down</i></a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#"> Login or Register</a></li>
-        <li><a href="#"><i class="material-icons">more_vert</i></a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="side-nav">
+            <li><a href="#"> Login or Register</a></li>
+            <li><a href="#"><i class="material-icons">more_vert</i></a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+</nav>
 
 
 
-  <div class="parallax-container">
+<div class="parallax-container">
     <div class="parallax"> <img src="content/image2.jpg" ></div>
-  </div>
+</div>
 
-  <div class="section blue-grey darken-4">
+<div class="section blue-grey darken-4">
     <div class="row container">
 
-      <h5 class="white-text light thin center"> Your next binge thing... </h5>
+        <h4 class="white-text lighten-1 light thin center"> Your next binge thing... </h4>
 
 
-      <section onload="getRecommended();">
+        <section onload="init();">
 
-      </section>
+        </section>
 
 
 
-    <div class="carousel">
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg" ></a>
-      <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg" ></a>
+        <div class="carousel">
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster1.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster2.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster3.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster4.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster5.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster6.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster7.jpg" ></a>
+            <a class="carousel-item" href="#modal1"><img src="content/posters/poster8.jpg" ></a>
+        </div>
+
+        <br>
+
+        <div class="container center">
+            <a class="brand-logo"> <img src="content/logo_white.png" height=auto style="max-width:75px"/> </a>
+
+        </div>
+
     </div>
-
-    <br>
-
-    <div class="container center">
-      <a class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
-
-    </div>
-
-  </div>
 </div>
 
 <div class="parallax-container">
-  <div class="parallax"><img src="content/image1.jpg" ></div>
+    <div class="parallax"><img src="content/image1.jpg" ></div>
 </div>
 
 
 <!-- Modal Structure -->
 <div id="modal1" class="modal blue-grey darken-4 white-text">
-  <div class="modal-content">
-    <h4 class="center deep-orange-text">Fight Club</h4>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  <div class="modal-footer blue-grey darken-4 white-text">
-    <a href="#!" class="btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">add</i></a>
+    <div class="modal-content">
+        <h4 class="center deep-orange-text">Fight Club (2005)</h4>
+        <div class="row">
+            <div class="col s6">Poster here </div>
+            <div class="col s6">
+                <div class="chip deep-orange lighten-1 white-text">
+                    Genre1
+                </div>
+                <div class="chip deep-orange lighten-1 white-text">
+                    Genre2
+                </div>
+                <div class="chip deep-orange lighten-1 white-text">
+                    Genre3
+                </div>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <!--  Thumbs up or down... ?
-    <a href="#!" class="btn-floating btn-large waves-effect waves-light green center"><i class="material-icons">thumb_up</i></a>
-    <a href="#!" class="btn-floating btn-large waves-effect waves-light red center"><i class="material-icons">thumb_down</i></a>
-  -->
-  <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i class="material-icons">check</i></a>
-</div>
+
+            </div>
+
+        </div>
+    </div>
+    <div class="modal-footer blue-grey darken-4 white-text">
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light deep-orange"><i class="material-icons">add</i></a>
+
+        <!--  Thumbs up or down... ?
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light green center"><i class="material-icons">thumb_up</i></a>
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light red center"><i class="material-icons">thumb_down</i></a>
+      -->
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i class="material-icons">check</i></a>
+    </div>
 </div>
 
 
 <footer class="page-footer deep-orange">
 
-  <div class="footer-copyright">
-    <div class="container white-text ">
-      © 2017 Copyright Text
-      <a class="orange-text text-lighten-3 right"> </a>
-      </div>
+    <div class="footer-copyright">
+        <div class="container white-text ">
+            © 2017 Copyright Text
+            <a class="orange-text text-lighten-3 right"> </a>
+        </div>
     </div>
-  </footer>
+</footer>
 
 
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+<!--  Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
 
 
 
