--- a/starter-template/sign_up.html
+++ b/starter-template/sign_up.html
@@ -25,7 +25,7 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="brand-logo"> <img src="content/logo_btn.png" height=auto style="max-width:35px"/> </a>
+      <a href="index.html" class="brand-logo "> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
@@ -45,60 +45,55 @@
   </nav>
 
 
-  <div class="section">
-    <center>
+    <div class="section">
       <br><br>
       <h5 class="white-text light"> Create your own account</h5>
-    <div class="container white"
-    <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-    <div class="row">
-      <form class="col s12">
+      <div class="container white">
+      <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
         <div class="row">
-          <div class="input-field col s6">
-            <i class="material-icons prefix deep-orange-text">account_circle</i>
-            <input id="first_name" type="text" class="validate">
-            <label for="first_name">First Name</label>
-          </div>
-          <div class="input-field col s6">
-            <i class="material-icons prefix deep-orange-text">account_circle</i>
-            <input id="last_name" type="text" class="validate">
-            <label for="last_name">Last Name</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix deep-orange-text">face</i>
-            <input id="user" type="text" class="validate">
-            <label for="user">Username</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix deep-orange-text">email</i>
-            <input id="email" type="email" class="validate">
-            <label for="email">Email</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix deep-orange-text">lock</i>
-            <input id="password" type="password" class="validate">
-            <label for="password">Password</label>
-          </div>
-        </div>
-        <center>
-          <div class='row'>
-            <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect deep-orange'>Submit</button>
-          </div>
-        </center>
-      </form>
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <i class="material-icons prefix deep-orange-text">account_circle</i>
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <i class="material-icons prefix deep-orange-text">account_circle</i>
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix deep-orange-text">face</i>
+                <input id="user" type="text" class="validate">
+                <label for="user">Username</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix deep-orange-text">email</i>
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix deep-orange-text">lock</i>
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class='row'>
+              <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect deep-orange'>Submit</button>
+            </div>
+          </form>
       </div>
-
     </div>
-  </div>
-</center>
-<br><br>
-</div>
+    <br><br>
+    </div>
+    </div>
 
 
   <footer class="page-footer deep-orange">
@@ -106,7 +101,7 @@
     <div class="footer-copyright">
       <div class="container white-text ">
          © 2017 Copyright Text
-      <a class="orange-text text-lighten-3 right" </a>
+      <a class="orange-text text-lighten-3 right"> </a>
       </div>
     </div>
   </footer>
